feat(env, docker-compose, scripts): add automated admin user creation for development
Add `PROSODY_ADMIN_PASSWORD` to `.env.development` for admin user
password configuration. Change `PROSODY_LOG_LEVEL` to `info` for
less verbose logging in development. Introduce a new service
`xmpp-admin-init-dev` in `docker-compose.dev.yml` to automate the
creation of an admin user in the development environment. This
service runs a new script `create-admin-user.sh` that checks for
the existence of the admin user and creates it if necessary.

Automating the admin user creation process simplifies the setup
for development environments, ensuring that developers can start
working with a pre-configured admin account without manual
intervention. This change enhances the developer experience by
reducing setup time and potential errors in user creation.

--- a/.env.development
+++ b/.env.development
@@ -25,6 +25,7 @@ PROSODY_DOMAIN=localhost
 
 # Admin JID (user@domain format)
 PROSODY_ADMIN_JID=admin@localhost
+PROSODY_ADMIN_PASSWORD=1234
 
 # Admin email for Let's Encrypt and notifications
 PROSODY_ADMIN_EMAIL=admin@localhost
@@ -94,7 +95,7 @@ PROSODY_SSL_CERT=certs/live/localhost/fullchain.pem
 # LOGGING & MONITORING
 # ============================================================================
 # Log level: debug, info, warn, error
-PROSODY_LOG_LEVEL=debug
+PROSODY_LOG_LEVEL=info
 
 # Statistics collection
 PROSODY_STATISTICS=internal
