feat(modules): implement local-first approach for Prosody community modules
Introduce a local-first approach for managing Prosody community modules
to avoid rate limiting and network issues during Docker builds. This
approach involves maintaining a local cache of community modules and
enabling only the necessary ones via symlinks. The Docker build process
is now offline for module installation, enhancing build reliability and
speed.

fix(docker): remove unnecessary scripts and update Dockerfile

Remove outdated scripts related to module installation and update the
Dockerfile to reflect the new local-first module management approach.
This change simplifies the Docker setup and reduces potential errors
related to network dependencies during builds.

docs: add documentation for new module management approach

Add COMMUNITY-MODULES-README.md to document the new local-first approach
for managing Prosody community modules. This documentation provides
clear instructions on setting up, enabling, and updating modules
locally, ensuring users can easily adapt to the new system.

chore: clean up Makefile and add new module management commands

Update the Makefile to include new commands for setting up, updating,
and enabling modules using the local-first approach. Remove obsolete
commands related to the old module installation method to streamline
the development workflow.

The changes aim to improve the reliability and efficiency of the
development and deployment process by reducing dependency on external
networks during Docker builds. This approach also simplifies module
management, making it easier for developers to customize their
environment with the necessary modules.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -46,7 +46,7 @@ services:
 
     # Volume mounts
     volumes:
-      - ./app/config:/etc/prosody/config:rw        # Prosody configuration
+      - ./app/config/prosody:/etc/prosody/config:rw        # Prosody configuration
       - xmpp_prosody_data:/var/lib/prosody/data    # Persistent data
       - xmpp_prosody_uploads:/var/lib/prosody/uploads  # File uploads
       - xmpp_certs:/etc/prosody/certs              # SSL certificates
@@ -76,8 +76,6 @@ services:
     depends_on:
       xmpp-postgres-dev:
         condition: service_healthy
-
-
 
     # Network configuration
     networks:
