--- a/config/nginx-docker.dev.conf
+++ b/config/nginx-docker.dev.conf
@@ -100,6 +100,29 @@ http {
             proxy_connect_timeout 10s;
         }
 
+        # Prosody admin web interface
+        location /admin {
+            proxy_pass http://xmpp-prosody-dev:5280/admin;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_redirect off;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 10s;
+            # CORS headers for admin interface
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Max-Age 1728000 always;
+                add_header Content-Type 'text/plain; charset=utf-8' always;
+                add_header Content-Length 0 always;
+                return 204;
+            }
+        }
+
         # Development test endpoint
         location = /dev-test {
             default_type text/plain;
