chore(env): remove sensitive information and unused files
Remove admin JID and password from .env.development to enhance security.
Delete .env.example to prevent accidental exposure of sensitive data.
Remove .hadolint.yaml and COMMUNITY-MODULES-README.md as they are no longer needed.
Update .gitignore to include .env.production.local for better security practices.
Add PRODUCTION-SETUP.md for detailed production deployment instructions.
Remove XMPP_DEV_VERIFICATION.md and test-admin-interface.sh as they are outdated.
Add setup-production-secrets.sh script for secure production environment setup.
Update Dockerfile and docker-compose files to improve module management and environment configuration.

These changes aim to improve security by removing sensitive information from version control and enhance the deployment process by providing clear instructions and scripts for setting up a production environment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     env_file:
       - path: .env.production
         required: true
+      - path: .env.production.local
+        required: true
 
     # Security configuration
     security_opt:
@@ -200,7 +202,9 @@ services:
     # Environment configuration
     env_file:
       - path: .env.production
-        required: false
+        required: true
+      - path: .env.production.local
+        required: true
 
     # Security configuration
     security_opt:
@@ -278,7 +282,9 @@ services:
     # Environment configuration
     env_file:
       - path: .env.production
-        required: false
+        required: true
+      - path: .env.production.local
+        required: true
 
     # TURN server configuration
     environment:
@@ -343,6 +349,8 @@ services:
     env_file:
       - path: .env.production
         required: true
+      - path: .env.production.local
+        required: true
 
     # Volume mounts
     volumes:
@@ -378,7 +386,9 @@ services:
     # Environment configuration
     env_file:
       - path: .env.production
-        required: false
+        required: true
+      - path: .env.production.local
+        required: true
 
     # Volume mounts
     volumes:
@@ -403,7 +413,9 @@ services:
     # Environment configuration
     env_file:
       - path: .env.production
-        required: false
+        required: true
+      - path: .env.production.local
+        required: true
 
     # Volume mounts
     volumes:
