fix(ci.yml): quote $PWD variable in docker run command to handle spaces
Quoting the $PWD variable ensures that paths with spaces are correctly
handled when mounting volumes in Docker. This change prevents potential
errors during the Trivy scan step in the CI workflow, improving
reliability and robustness of the CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,7 +178,7 @@ jobs:
 
           # Run Trivy scan (critical only)
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $PWD:/tmp/work \
+            -v "$PWD:/tmp/work" \
             aquasecurity/trivy:latest image \
             --format json \
             --severity CRITICAL \
@@ -509,7 +509,7 @@ jobs:
 
           # Run Trivy scan (critical only)
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $PWD:/tmp/work \
+            -v "$PWD:/tmp/work" \
             aquasecurity/trivy:latest image \
             --format json \
             --severity CRITICAL \
