--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,13 +98,17 @@ jobs:
 
           if [ -z "$files" ]; then
             echo "No ${{ matrix.language }} files found"
-            echo "skip=true" >> "$GITHUB_OUTPUT"
+            {
+              echo "skip=true"
+            } >> "$GITHUB_OUTPUT"
           else
-            echo "skip=false" >> "$GITHUB_OUTPUT"
-            # Store files list safely, handling special characters
-            echo "files<<EOF" >> "$GITHUB_OUTPUT"
-            echo "$files" >> "$GITHUB_OUTPUT"
-            echo "EOF" >> "$GITHUB_OUTPUT"
+            {
+              echo "skip=false"
+              # Store files list safely, handling special characters
+              echo "files<<EOF"
+              echo "$files"
+              echo "EOF"
+            } >> "$GITHUB_OUTPUT"
           fi
 
       - name: Run sh-checker (shell files only)
