--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -3,25 +3,17 @@
 
 [allowlist]
 description = "Allowlist for prosody-modules directories"
-paths = [
-    "prosody-modules/**",
-    "prosody-modules-enabled/**"
-]
+paths = ["prosody-modules/**", "prosody-modules-enabled/**"]
 
 # Also exclude common false positives
 regexes = [
-    "AKIA[0-9A-Z]{16}",           # AWS Access Key ID
-    "ghp_[a-zA-Z0-9]{36}",        # GitHub Personal Access Token
-    "gho_[a-zA-Z0-9]{36}",        # GitHub OAuth Token
-    "ghu_[a-zA-Z0-9]{36}",        # GitHub User-to-Server Token
-    "ghs_[a-zA-Z0-9]{36}",        # GitHub Server-to-Server Token
-    "ghr_[a-zA-Z0-9]{36}"         # GitHub Refresh Token
+    "AKIA[0-9A-Z]{16}",    # AWS Access Key ID
+    "ghp_[a-zA-Z0-9]{36}", # GitHub Personal Access Token
+    "gho_[a-zA-Z0-9]{36}", # GitHub OAuth Token
+    "ghu_[a-zA-Z0-9]{36}", # GitHub User-to-Server Token
+    "ghs_[a-zA-Z0-9]{36}", # GitHub Server-to-Server Token
+    "ghr_[a-zA-Z0-9]{36}", # GitHub Refresh Token
 ]
 
 # Exclude common test/example files
-files = [
-    "**/*.test.*",
-    "**/*.spec.*",
-    "**/*.example.*",
-    "**/*.sample.*"
-]
+files = ["**/*.test.*", "**/*.spec.*", "**/*.example.*", "**/*.sample.*"]
