fix: resolve GitLeaks configuration issues
- Fix invalid regex pattern '**' in .gitleaks.toml (GitLeaks doesn't support glob patterns)
- Remove unsupported 'config' parameter from GitLeaks action
- Use simple directory names for allowlist paths
- GitLeaks will now run without regex compilation errors

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -3,7 +3,7 @@
 
 [allowlist]
 description = "Allowlist for prosody-modules directories"
-paths = ["prosody-modules/**", "prosody-modules-enabled/**"]
+paths = ["prosody-modules", "prosody-modules-enabled"]
 
 # Also exclude common false positives
 regexes = [
