fix: resolve GitLeaks shallow clone issues in CI
- Add detect section to .gitleaks.toml to handle shallow clones
- Configure GitLeaks to scan working directory instead of commit ranges
- Increase fetch-depth to 2 in security job for better commit history access
- Prevents 'unknown revision' errors in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,6 +180,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - name: Run GitLeaks secret scanner
         uses: gitleaks/gitleaks-action@v2
