fix: use fetch-depth: 0 for security job to resolve GitLeaks commit range errors
- Change security job checkout from fetch-depth: 2 to fetch-depth: 0
- Ensures full commit history is available for GitLeaks scanning
- Remove unnecessary workarounds from .gitleaks.toml since full history is now available
- GitLeaks can now properly scan commit ranges without 'unknown revision' errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,7 +181,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0  # Fetch all history for complete commit range
 
       - name: Run GitLeaks secret scanner
         uses: gitleaks/gitleaks-action@v2
