--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,7 +200,7 @@ jobs:
           # Run Trivy scan (critical only)
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
             -v "$PWD:/tmp/work" \
-            aquasecurity/trivy:latest image \
+            ghcr.io/aquasecurity/trivy:latest image \
             --format json \
             --severity CRITICAL \
             --output /tmp/work/trivy-results.json \
@@ -527,7 +527,7 @@ jobs:
           # Run Trivy scan (critical only)
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
             -v "$PWD:/tmp/work" \
-            aquasecurity/trivy:latest image \
+            ghcr.io/aquasecurity/trivy:latest image \
             --format json \
             --severity CRITICAL \
             --output /tmp/work/trivy-results.json \
